--- a/mysite/quiz/templates/quiz/verify_email.html
+++ b/mysite/quiz/templates/quiz/verify_email.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% autoescape off %}
 Hi, {{ user.get_username }},
-Пожалуйста перейдите по ссылке, чтобы закончить регистрацию
-{{ protocol }}://{{ domain }}{% url 'email_verification' uidb64=uid token=token %}
-</body>
-</html>
+
+Пожалуйста перейдите по ссылке, чтобы закончить регистрацию:
+
+http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+{% endautoescape %}
