--- a/mysite/quiz/templates/registration/invalid_verify.html
+++ b/mysite/quiz/templates/registration/invalid_verify.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-Пожалуйста, перейдите в свою почту, чтобы закончить регистрацию
+<h1>Токен не коррентый!</h1>
 </body>
 </html>
