--- a/mysite/quiz/templates/quiz/index.html
+++ b/mysite/quiz/templates/quiz/index.html
@@ -8,7 +8,7 @@
         color: red;
     }
     .card{
-        margin-bottom: 10px;
+        margin-top: 60px;
     }
 </style>
     <div class="col-6 content">
