--- a/mysite/quiz/templates/registration/html_password_reset_email.html
+++ b/mysite/quiz/templates/registration/html_password_reset_email.html
@@ -1,3 +1,3 @@
-
-Доброго времени суток, {{ user.get_username }}
-Нажмите на <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">ссылку</a> для восстановления пароля
+<h3>Здравствуйте, {{ user.get_username }}</h3>
+<p>Пожалуйста перейдите по <a href="http://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">ссылке</a> ,
+    для восстановления пароля</p>
