--- a/mysite/quiz/templates/registration/password_change_done.html
+++ b/mysite/quiz/templates/registration/password_change_done.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Пароль успешно сменен!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <style>
+        .title {
+            text-align: center;
+            margin: 100px auto 0;
+            border: 2px solid black;
+        }
+    </style>
+    <h1 class="title col-10 col-md-6">Вы успешно сменили пароль</h1>
+{% endblock %}
