--- a/mysite/quiz/templates/registration/password_reset.html
+++ b/mysite/quiz/templates/registration/password_reset.html
@@ -1,8 +1,29 @@
-<h3>Password reset</h3>
+{% extends 'base.html' %}
+{% block navbar %}
+    {% if user.is_anonymous %}
+        {% include 'other/anonimous_navbar.html' %}
+    {% else %}
+        {{ block.super }}
+    {% endif %}
+{% endblock %}
+{% block content %}
+    <style>
+        .login-group {
+            margin: 0 auto;
+        }
 
-<p> Забыли пароль? Укажите email адрес, чтобы мы могли выслать вам ссылку для сброса пароля</p>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Восстановить мой пароль">
-</form>
+        .title {
+            margin-top: 50px;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+    </style>
+    <h1 class="title">Сброс пароля</h1>
+    <div class="login-group col-lg-4 col-sm-10">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary btn-block">Сбросить пароль</button>
+        </form>
+    </div>
+{% endblock %}
