--- a/mysite/quiz/templates/registration/password_reset_sent.html
+++ b/mysite/quiz/templates/registration/password_reset_sent.html
@@ -1,2 +1,24 @@
-<h1>Вы начали процедуру восстановления пароля</h1>
-<p>Перейдите, пожалуйста, на свой адрес электронной почты и нажмите на ссылку</p>
+{% extends 'base.html' %}
+{% block navbar %}
+    {% if user.is_authenticated %}
+        {{ block.super }}
+    {% else %}
+        {% include 'other/anonimous_navbar.html' %}
+    {% endif %}
+{% endblock %}
+{% block content %}
+    <style>
+        .content h2 {
+            text-align: center;
+        }
+
+        .content {
+            border: 2px solid black;
+            margin: 100px auto 0;
+        }
+    </style>
+    <div class="content col-10">
+        <h2>Пожалуйста, перейдите в свою почту, чтобы сбросить пароль</h2>
+    </div>
+{% endblock %}
+
