--- a/mysite/quiz/templates/manage/base.html
+++ b/mysite/quiz/templates/manage/base.html
@@ -1,8 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>βeta</title>
@@ -10,34 +9,7 @@
 </head>
 <body>
 <style>
-    .navbar-nav .dropdown-menu {
-        right: 0;
-        left: auto;
-    }
-
-    .navbar-collapse {
-        text-align: right;
-    }
-
-    body {
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
-
-    a.nav-link {
-        height: 100%;
-        vertical-align: center;
-    }
-
-    a.navbar-brand {
-        height: 100%;
-    }
-
-    nav.navbar {
-        align-items: center;
-    }
-
-    .paginate{
+    .paginate {
         margin: 0 auto;
     }
 
@@ -46,56 +18,24 @@
         justify-content: center;
     }
 </style>
-{% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="{% url 'home' %}">βeta</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Новости</i><span
-                                class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'quizes' %}">Опросы
-                            {% if count != 0 %}
-                                <span class="fa-stack">
-                    <span class="fa fa-comment fa-stack-2x"></span>
-                        <strong class="fa-stack-1x">{{ count }}</strong>
-                    </span>
-                            {% endif %}
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#footer">Контакты</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
-                            <i class="fa fa-user" aria-hidden="true"></i>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="{% url 'password_change' %}">Изменить пароль</a>
-                            <a class="dropdown-item" href="{% url 'password_reset' %}">Сбросить пароль</a>
-                            <a class="dropdown-item" href="{% url 'logout' %}">Выйти</a>
-                        </div>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Войти</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-{% endblock %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="{% url 'manage_houses' %}">βeta</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'manage_houses' %}">Дома</i><span
+                        class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Сайт</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 {% block content %}{% endblock %}
 {% block pagination %}
     <div class="col-6 paginate">
