--- a/mysite/quiz/templates/quiz/quiz_answer.html
+++ b/mysite/quiz/templates/quiz/quiz_answer.html
@@ -5,35 +5,43 @@
             margin: 0 auto;
         }
 
-        h5 {
-            color: red;
+        .content {
+            margin-top: 100px;
         }
 
-        .card {
-            margin-top: 60px;
+        .card-header h6 {
+            margin: 0;
+        }
+
+        .card-footer {
+            text-align: right;
         }
     </style>
-    <div class="col-6 content">
+    <div class="col-12 col-md-10 col-lg-8 col-xl-6 content">
         <div class="card">
+            {% now "Y-m-d-H-i-s" as now_datetime %}
             <div class="card-header">
-                {% if quiz.created_at >= quiz.finished_at %}
+                {% if now_datetime  > quiz.finished_at|date:"Y-m-d-H-i-s" %}
                     <div>
                         <h6>Голосование закончилось</h6>
                     </div>
                 {% else %}
                     <div>
-                        <h6>Голосование активно</h6>
+                        <h6>Голосование активно (закончится {{ quiz.finished_at }})</h6>
                     </div>
                 {% endif %}
             </div>
             <div class="card-body">
                 {% if quiz_answer != "Вы еще не проголосовали" %}
                     <h5 class="card-title">{{ quiz_answer.quiz.title }}</h5>
-                    <p class="card-text">Ваш ответ: {{ quiz_answer.get_display_answer }}</p>
+                    <p class="card-text">{{ quiz.text }}</p>
+                    <h6 class="card-text">Ваш ответ: {{ quiz_answer.get_display_answer }}
+                        ({{ quiz_answer.created_at }})</h6>
                 {% else %}
-                    <h5 class="card-title">{{ quiz.title }}</h5>
-                    <p class="card-text">Ваш ответ: Вы не проголосовали </p>
-                    {% if quiz.created_at <= quiz.finished_at %}
+                    <h6 class="card-title">{{ quiz.title }}</h6>
+                    <p class="card-text">{{ quiz.text }}</p>
+                    <h6 class="card-text">Ваш ответ: Вы не проголосовали </h6>
+                    {% if now_datetime  < quiz.finished_at|date:"Y-m-d-H-i-s" %}
                         <form action="" method="post">
                             {% csrf_token %}
                             {{ form.as_p }}
@@ -42,6 +50,10 @@
                     {% endif %}
                 {% endif %}
             </div>
+            <div class="card-footer">{{ quiz.created_at }}</div>
+        </div>
+        <div class="card-body">
+            <a href="{% url 'quizes' %}" class="btn btn-primary">Назад</a>
         </div>
     </div>
 {% endblock %}
