--- a/mysite/quiz/templates/registration/invalid_verify.html
+++ b/mysite/quiz/templates/registration/invalid_verify.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Токен не коррентый!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block navbar %}
+    {% include 'other/anonimous_navbar.html' %}
+{% endblock %}
+{% block content %}
+    <style>
+        .content h2 {
+            text-align: center;
+        }
+        .content {
+            border: 2px solid black;
+            margin: 100px auto 0;
+        }
+    </style>
+    <div class="content col-10">
+        <h2>Некорректный токен. Пожалуйста, повторите попытку входа</h2>
+    </div>
+{% endblock %}
