--- a/mysite/quiz/templates/registration/password_reset_complete.html
+++ b/mysite/quiz/templates/registration/password_reset_complete.html
@@ -1,7 +1,19 @@
-<div class="container p-4">
-	    <h2 class="font-weight-bold mt-3">Password reset complete</h2>
-		<hr>
-        <p>Your password has been set. You may go ahead and log in now.</p>
-        <a href="{% url 'login' %}" class="btn btn-primary">Log in</a>
-</div>
+{% extends 'base.html' %}
+{% block content %}
+    <style>
+    .complete{
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 300px;
+    }
+    .complete a{
+        margin-top: 30px;
+    }
+    </style>
+    <div class="col-lg-4 col-sm-10 complete">
+        <h3>Ваш новый пароль был успешно изменен</h3>
+        <a href="{% url 'login' %}" class="btn btn-primary btn-block">Войти</a>
+    </div>
+{% endblock %}
 
