--- a/mysite/quiz/templates/registration/password_reset_confirm.html
+++ b/mysite/quiz/templates/registration/password_reset_confirm.html
@@ -1,15 +1,35 @@
-{% if validlink %}
+{% extends 'base.html' %}
+{% block content %}
+    {% if validlink %}
+        <style>
+            .title {
+                margin-bottom: 30px;
+                margin-top: 30px;
+                text-align: center;
+            }
 
-<h1>Set a new password!</h1>
-<form method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Change my password">
-</form>
-
-{% else %}
-
-<p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
-
-{% endif %}
-
+            .reset_password {
+                margin: 0 auto;
+            }
+        </style>
+        <h1 class="title">Смена пароля:</h1>
+        <div class="col-10 col-md-4 reset_password">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary btn-block">Сменить пароль</button>
+            </form>
+        </div>
+    {% else %}
+        <style>
+        .incorrect{
+            text-align: center;
+            margin: 100px auto 0;
+            border: 2px solid black;
+        }
+        </style>
+        <div class="col-10 incorrect">
+            <h1>Ссылка истекла или недействительна</h1>
+        </div>
+    {% endif %}
+{% endblock %}
