--- a/mysite/quiz/templates/registration/verify_email.html
+++ b/mysite/quiz/templates/registration/verify_email.html
@@ -1,7 +1,3 @@
-{% autoescape off %}
-Hi, {{ user.get_username }},
-
-Пожалуйста перейдите по ссылке, чтобы закончить регистрацию:
-
-http://{{ domain }}{% url 'verify_email' uidb64=uid token=token %}
-{% endautoescape %}
+<h3>Здравствуйте, {{ user.get_username }}</h3>
+<p>Пожалуйста перейдите по <a href="http://{{ domain }}{% url 'verify_email' uidb64=uid token=token %}">ссылке</a> ,
+    чтобы закончить регистрацию:</p>
